# docci

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
docci/: api.py  config.py  file.py  xlsx.py  zip.py
docs/: conf.py  index.rst
test_data/: text.txt
tests/: test_api.py  test_file.py  test_xlsx.py  test_zip.py
