[tool.poetry]
name = "docci"
version = "0.1.0"
description = "Various document utils"
authors = ["potykion <potykion@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
